# GDELT_DataLoader

./: README.md  main.py  pyproject.toml
src/: CAMEO_country.txt  DataLoader.py  app.py
src/apps/: eventdata_app.py  graphdata_app.py
src/cameo/: CAMEO_event.txt
src/dataloaders/: EventDataLoader.py  GraphDataLoader.py
